--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Thalia Tiffany" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>Thalia Tiffany</title>
+        <title>SD App</title>
     </head>
     <body style="-webkit-app-region: drag">
         <noscript>
