Renamed App to Sales & Distribution Desktop

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Sales & Distribution App" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>Sales & Distribution App</title>
+        <title>Sales & Distribution Desktop</title>
     </head>
     <body style="-webkit-app-region: drag">
         <div id="root"></div>
